--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="contenedor">
-        <div id="verde" style="grid-template-columns: 3;"> </div>
-        <div class="blanco" style="grid-template-columns: 3;">
-           
-        </div>
-        <div id="rojo" style="grid-template-columns: 3;"></div>
-        </div>
+    <div class="grid-layout">
+        <div class="item" style="--color:green;"></div>
+        <div class="blanco" style="--color:white;">
+            <div class="item2" ></div>
+            <div class="item2">
+            <img id="escudo" src="Aguila.png" width="95%" >
+             </div>
+            <div class="item2"></div>
+         </div>
+        <div class="item" style="--color:red;"></div>
+
+     </div>
+        
 
 </body>
 </html>
